service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubtest-service
spec:
  selector:
    app: kubtest
  ports:
    - protocol: TCP
      port: 80        # Service port that will be exposed
      targetPort: 8080 # This should match the port your application is listening on inside the container
      nodePort: 30080  # Port on which the service will be accessible
  type: NodePort
